[master] adicionando cors do  vercel.